@@ -1,3 +1,8 @@
+2009-10-09  Richard Guenther  <rguenther@suse.de>
+
+	* cgraph.c (cgraph_create_edge): Check for NULL call_stmt
+	before calling stmt_can_throw_external.
+
 2009-10-09  Eric Botcazou  <ebotcazou@adacore.com>
 
 	PR tree-optimization/40071
